# fop-caro

./: .gitignore  CMakeLists.txt  README.md  RGBCaro.filters  RGBCaro.slnx  RGBCaro.vcxproj  RGBCaro.vcxproj.filters  fop-caro-temp.slnx  fop-caro-temp.vcxproj  patch.py
assets/: .gitignore
assets/src/: main.cpp
saves/: save_20260418_153411.txt  save_20260418_154410.txt  save_20260420_192350.txt  test_save.txt
src/: audio_manager.cpp  audio_manager.h  bot_ai.cpp  bot_ai.h  controller.cpp  controller.h  main.cpp  model.cpp  model.h  save_manager.cpp  save_manager.h  view.cpp  view.h
